--- a/veolia-poc/pom.xml
+++ b/veolia-poc/pom.xml
@@ -22,37 +22,19 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.scala-lang</groupId>
-      <artifactId>scala-library</artifactId>
-      <version>${scala.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.11</artifactId>
       <version>2.2.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.11</artifactId>
       <version>2.2.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.bigdata.dis</groupId>
-      <artifactId>dis-spark-streaming_2.11</artifactId>
-      <version>1.0.4</version>
-    </dependency>
-    <dependency>
-      <groupId>com.huaweicloud.dis</groupId>
-      <artifactId>huaweicloud-sdk-java-dis</artifactId>
-      <version>1.3.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.huaweicloud.dis</groupId>
-      <artifactId>huaweicloud-sdk-java-dis-iface</artifactId>
-      <version>1.3.0-SNAPSHOT</version>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-clients</artifactId>
+      <version>0.10.0.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
