--- a/veolia-poc/pom.xml
+++ b/veolia-poc/pom.xml
@@ -28,6 +28,11 @@
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.11</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_2.11</artifactId>
       <version>2.2.0</version>
     </dependency>
@@ -47,11 +52,11 @@
       <artifactId>huaweicloud-dws-jdbc</artifactId>
       <version>1.2.0</version>
     </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.8.5</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>com.google.code.gson</groupId>-->
+      <!--<artifactId>gson</artifactId>-->
+      <!--<version>2.8.5</version>-->
+    <!--</dependency>-->
 
 
   </dependencies>
